css/ufc.css
/* ... */
select:required:invalid:focus,
textarea:required:invalid:focus,
input[type=date]:required:invalid:focus,
input[type=datetime-local]:required:invalid:focus,
input[type=datetime]:required:invalid:focus,
input[type=email]:required:invalid:focus,
input[type=month]:required:invalid:focus,
input[type=number]:required:invalid:focus,
input[type=password]:required:invalid:focus,
input[type=search]:required:invalid:focus,
input[type=tel]:required:invalid:focus,
input[type=text]:required:invalid:focus,
input[type=time]:required:invalid:focus,
input[type=url]:required:invalid:focus,
input[type=week]:required:invalid:focus {
  border-color: var(--co-textfld-invalid-focus-border);
}

select::selection,
textarea::selection,
input[type=date]::selection,
input[type=datetime-local]::selection,
input[type=email]::selection,
input[type=month]::selection,
input[type=number]::selection,
input[type=datetime]::selection,
input[type=password]::selection,
input[type=search]::selection,
input[type=tel]::selection,
input[type=text]::selection,
input[type=time]::selection,
input[type=url]::selection,
input[type=week]::selection {
  background-color: var(--co-body-accent);
  color: var(--co-body-accent-contrast);
}

select:not([disabled], [readonly]) option:focus,
select:not([disabled], [readonly]) option:active,
select:not([disabled], [readonly]) option:hover,
select:not([disabled], [readonly]) option:checked,
option:not([disabled], [readonly]) option:focus,
option:not([disabled], [readonly]) option:active,
option:not([disabled], [readonly]) option:hover,
option:not([disabled], [readonly]) option:checked {
  background-color: var(--co-body-accent);
  color: var(--co-body-accent-contrast);
}

input[type=color] {
  cursor: pointer;
  border-style: solid;
  border-radius: var(--radius-inputs);
  border-color: var(--co-textfld-border);
  background-color: var(--co-textfld-bg);
}

input[type=color]:hover:not([disabled]),
input[type=color]:active:not([disabled]) {
  border-color: var(--co-textfld-active-border);
}

input[type=color]:focus {
  outline: 0;
}

input[type=color]:focus:not([disabled]) {
  border-color: var(--co-textfld-focus-border);
}

kbd,
button,
.u-link-button,
#cancel-comment-reply-link,
.u-badge,
input[type=reset],
input[type=submit],
input[type=button],
input::file-selector-button {
  width: fit-content;
  border-color: var(--co-btn-bg);
  background-color: var(--co-btn-bg);
  color: var(--co-btn-text);
  cursor: pointer;
}

button:hover,
button:active,
.u-link-button:hover,
.u-link-button:active,
#cancel-comment-reply-link:hover,
#cancel-comment-reply-link:active,
input[type=reset]:hover,
input[type=reset]:active,
input[type=submit]:hover,
input[type=submit]:active,
input[type=button]:hover,
input[type=button]:active,
input::file-selector-button:hover,
input::file-selector-button:active {
  text-decoration: none;
  color: var(--co-btn-active-text);
  background-color: var(--co-btn-active-bg);
  border-color: var(--co-btn-active-bg);
}

button:focus,
.u-link-button:focus,
#cancel-comment-reply-link:focus,
.u-link-button-selected,
input[type=reset]:focus,
input[type=submit]:focus,
input[type=button]:focus,
input::file-selector-button:focus {
  background-color: var(--co-btn-focus-bg);
}

.u-link-button-selected {
  cursor: default;
  pointer-events: none;
  border-color: var(--co-btn-active-bg);
}

/* Labels */
label {
  cursor: pointer;
  display: block;
  margin-bottom: var(--margin-label);
}

label:last-child,
fieldset:last-child,
label:has(input[type="radio"]):only-child,
label:has(input[type="checkbox"]):only-child { margin-bottom: unset }

textarea {
  max-width: var(--width-textarea);
  height: var(--height-textarea);
  resize: vertical;
}

textarea:read-only,
textarea:disabled {
  resize: none;
}

input::file-selector-button {
  margin-right: var(--margin-form-gap);
}

label:has(input:disabled) {
  opacity: var(--opacity-input-disabled);
  cursor: not-allowed;
}

label:has(input:disabled) :disabled {
  opacity: 1;
}

input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration {
  -webkit-appearance:none;
}

input[type="search"]{
  background-image: var(--co-search-icon);
  background-repeat: no-repeat;
  background-size: 1.6em 1.2em;
  background-position: calc(100% - 0.5em) center;
  padding-right: 2.5em;
}

select,
::picker(select) {
  appearance: base-select;
}

select {
  gaps: 0;
  display: grid;
  align-items: center;
  color:var(--co-textfld-text);
  grid-template-columns: 1fr auto;
}

option  {
  color:var(--co-textfld-text);
  padding: var(--padding-inputs);
  background-color: var(--co-textfld-bg);
}

option:not(:last-child)  {
  border-bottom: var(--width-input-border) solid var(--co-textfld-border);
}

select::picker-icon {
  content: var(--co-select-arrow);
  transition: transform var(--transition-duration-inputs) var(--transition-function-inputs);
}

select:open::picker-icon {
  transform: rotate(180deg);
}

option::checkmark {
  content: "L";
  line-height: 1;
  font-size: 14px;
  font-weight: 700;
  display: inline-block;
  font-family: monospace;
  transform: rotate(35deg) scaleX(-1);
}

fieldset {width: 100%; display: grid; border: var(--width-input-border) solid var(--co-textfld-active-border); padding: var(--margin-label); margin-bottom: var(--margin-label); max-width: var(--width-inputs); gap: var(--margin-label) }
form {width: 100%; display: grid; max-width: var(--width-inputs); gap: var(--margin-label) }
#searchbar {width: unset;}
#searchbar label {margin: unset;}

/* Checkbox and Radio */
input[type="radio"],
input[type="checkbox"] {
  margin: 0;
  width: 18px;
  height: 18px;
}

/* Meter and Progress */
meter,
progress {
  height: 18px;
  appearance: none;
  border-radius: 100px;
  background: var(--co-textfld-bg);
  border: var(--width-input-border) solid var(--co-textfld-border);
}
/* ... */

